gcc/testsuite/gdc.test/fail_compilation/imports/range15788.d
module imports.range15788;

auto iota(B, E, S)(B, E, S)
{
}
